texture loading simplified

--- a/visual_studio/ogltank.vcxproj
+++ b/visual_studio/ogltank.vcxproj
@@ -26,6 +26,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\elements.h" />
+    <ClInclude Include="..\src\t34.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
