--- a/visual_studio/ogltank.vcxproj.filters
+++ b/visual_studio/ogltank.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="..\src\elements.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\t34.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
